--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -13,3 +13,6 @@
 @import 'layout/contactar';
 @import 'layout/inferior';
 @import 'layout/testimoniales';
+
+/*Páginas internas*/
+@import 'internas/nosotros';
