Finalizacion de todo el HTML Y CSS en proyecto

--- a/src/scss/layout/_inferior.scss
+++ b/src/scss/layout/_inferior.scss
@@ -17,6 +17,12 @@
     }
 }
 
+.informacion-meta {
+    span {
+        color: $amarillo;
+    }
+}
+
 .texto-entrada {
     a{
         color: $negro;
@@ -39,8 +45,5 @@
             background-color: $verde;
             margin-top: 1rem;
         }
-    }
-    span {
-        color: $amarillo;
     }
 }
