--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -13,6 +13,7 @@
 @import 'layout/contactar';
 @import 'layout/inferior';
 @import 'layout/testimoniales';
+@import 'layout/formularios';
 
 /*Páginas internas*/
 @import 'internas/nosotros';
