--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -32,9 +32,11 @@
     text-align: center;
     margin-top: $separacion / 2;
     display: $display;
+    border: none;
 
     &:hover {
         background-color: darken($bgColor, 5);
+        cursor: pointer;
     }
 }
 
