--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -7,6 +7,11 @@
         padding-top: $separacion / 2;
 
     }
+    .navegacion {
+        visibility: visible;
+        height: auto;
+        opacity: 1;
+    }
     .copyright {
         text-align: center;
         color: $blanco;
