--- a/src/scss/layout/_navegacion.scss
+++ b/src/scss/layout/_navegacion.scss
@@ -1,16 +1,52 @@
+.derecha {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @include tablet {
+        align-items: flex-end;
+    }
+    .dark-mode-boton {
+        width: 3rem;
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+
+        filter: invert(100%);
+        &:hover {
+            cursor: pointer;
+        }
+
+        @include tablet {
+            margin-top: 0;
+        }
+    }
+}
+
 .barra {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding-top: 3rem;
     @include tablet {
         flex-direction: row;
         justify-content: space-between;
+        align-items: flex-end;
     }
 }
 .navegacion {
+
+    visibility: hidden;
+    opacity: 0;
+    height: 0;
+    transition: visibility 0.3s ease-in-out, opacity 0.5s linear, height 0.5s linear;
+
+
     @include tablet {
         display: flex;
         align-items: center;
+        visibility: visible;
+        opacity: 1;
+        
     }
     a {
         color: $blanco;
@@ -27,5 +63,25 @@
                 margin-right: 0;
             }
         }
+
+        &:hover {
+            color: $verde;
+        }
     }
+}
+
+
+/*Menú de hamburguesa*/
+.mobile-menu {
+    @include tablet {
+        display: none;
+    }
+    img {
+        width: 5rem;
+    }
+}
+.mostrar {
+    visibility: visible;
+    height: auto;
+    opacity: 1;
 }
